# ethical-site-inspector

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  Makefile  README.md  REPO_DEEP_DIVE_REPORT.md  audits.json  find_audit_with_videos.py  fix_lint.py  generate_webm.py  package-lock.json  package.json  render.yaml  test_audit_request.json  test_minimal.webm  test_pdf_endpoint.py  test_regpdf_assertions.py
backend/: .env.example  alembic.ini  generate_valid_webm.py  mypy_errors.txt  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt  server.err  valid_minimal.webm
backend/alembic/: env.py
backend/alembic/versions/: 20260311_0001_initial.py  20260313_0002_add_regulatory_mapping_and_suppression.py  20260314_0003_add_video_urls_to_audits.py  6e81669bfdad_add_benchmarks_table.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  logging.py  resilience.py  taxonomy.py
backend/app/detectors/: __init__.py  rule_engine.py  suppression.py
backend/app/models/: __init__.py  (+2 more)
backend/scripts/: backfill_regulatory_data.py  export_openapi.py  verify_backfill.py
backend/tests/: conftest.py  test_audit_lifecycle.py  test_audits_api.py  test_benchmarks_api.py  test_cloudformation.py  test_compliance_pdf.py  test_config.py  test_deployment.py  test_health_api.py  test_mock_video_events_integration.py  test_nova_act_provider.py  test_pdf_export.py  test_provider_registry.py  test_regulatory_mapping.py  test_rule_engine.py  test_schemas.py  test_storage.py  test_suppression.py  test_taxonomy.py  test_video_recording.py
(+177 files in other folders)
